@@ -1163,6 +1163,13 @@ ptr_t GC_get_main_stack_base(void)
 #          endif
 #       endif /* HEURISTIC1 */
 #       ifdef LINUX_STACKBOTTOM
+#          if defined(THREADS) && defined(USE_GET_STACKBASE_FOR_MAIN)
+             {
+               struct GC_stack_base sb;
+               if (GC_get_stack_base(&sb) == GC_SUCCESS)
+                 return (ptr_t)sb.mem_base;
+             }
+#          endif
            result = GC_linux_stack_base();
 #       endif
 #       ifdef FREEBSD_STACKBOTTOM
